name:                maintainer
version:             0.1.0.0
homepage:            https://github.com/githubuser/maintainer#readme
license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable maintainer
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , http-client
                     , http-client-tls
                     , aeson
                     , bytestring
                     , attoparsec
                     , http-types
                     , directory
                     , yaml
                     , unordered-containers
                     , text
                     , time
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/maintainer
